--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -15,9 +15,14 @@
 {% block content %}
 <div class="row">
     <div class="col-1"></div>
-    <div class="col-10">
-        <center>Published {{ blog_published_date }}</center>
+    <div class="col-10" >
+        <div style="background-color: #263C59; border-radius: 1em; padding: 1em; text-align: center;">
+            Like my content and want to get notified when there's something new?
+            <br>
+            You can subscribe via <a href="https://tinyletter.com/sethmlarson" target="_blank" rel="nofollow noopener noreferrer">Email</a> and <a href="{{ url_for('rss_blog_posts') }}">RSS</a>
+        </div>
         <br>
+        <center>Published {{ blog_published_date }}</center>
     </div>
     <div class="col-1"></div>
 </div>
@@ -25,19 +30,6 @@
     <div class="col-1"></div>
     <div class="col-10">
         {{ blog_content | safe }}
-    </div>
-    <div class="col-1"></div>
-</div>
-<div class="row" style="margin-bottom: 3em;">
-    <div class="col-1"></div>
-    <div class="col-2" style="text-align: right;">
-        <span style="font-size: 2rem;">\</span><span style="font-size: 3rem;">☺</span><span style="font-size: 2rem;">/</span>
-    </div>
-    <div class="col-8">
-        <h3>Enjoy this post and want more?</h3>
-
-        <p>Get notified when there are new posts via <a href="https://tinyletter.com/sethmlarson" target="_blank" rel="nofollow noopener noreferrer">Email</a> and <a href="{{ url_for('rss_blog_posts') }}">RSS</a>
-        or <a href="{{ url_for('list_blog_posts') }}">read other blog posts</a> while you wait.</p>
     </div>
     <div class="col-1"></div>
 </div>
