--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,6 +5,8 @@
         <div class="row">
             <div class="col-1"></div>
         <div class="col-10">
+            <center><i>"A blog about Python and the Internet."</i></center>
+            <br>
             <h2>Who am I?</h2>
             <p>
                 My pronouns are he/him. I was born and raised in Minneapolis, Minnesota
@@ -26,15 +28,16 @@
             <p>
                 Other projects I contribute to include
                 <a href="https://github.com/psf/requests" target="_blank" rel="noopener noreferrer">requests</a>,
-                <a href="https://utf8.xyz" target="_blank" rel="noopener noreferrer">utf8.xyz</a>,
+                <a href="https://github.com/python-distro/distro" target="_blank" rel="noopener noreferrer">distro</a>,
                 <a href="https://github.com/python-hyper/rfc3986" target="_blank" rel="noopener noreferrer">rfc3986</a>,
                 <a href="https://github.com/python-hyper/brotlicffi" target="_blank" rel="noopener noreferrer">brotlicffi</a>,
                 <a href="https://github.com/sethmlarson/hstspreload" target="_blank" rel="noopener noreferrer">hstspreload</a>,
+                <a href="https://utf8.xyz" target="_blank" rel="noopener noreferrer">utf8.xyz</a>,
                 <a href="https://github.com/python-trio/sniffio" target="_blank" rel="noopener noreferrer">sniffio</a>, and
                 <a href="https://github.com/python-trio/unasync" target="_blank" rel="noopener noreferrer">unasync</a>.
                 If you benefit from any of these projects you can
                 <a href="https://github.com/sponsors/sethmlarson" target="_blank" rel="noopener noreferrer">
-                sponsor me on GitHub Sponsors</a> to show your support.
+                sponsor me on GitHub Sponsors</a> to support my cravings for foods like tacos and hotpot.
             </p>
             <p>
                 I <a href="/blog">blog</a> and
