--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,6 +33,15 @@
         color: #ffffff;
         background-color: #222226;
       }
+      :not(pre) > code {
+        background-color: #263C59;
+        border-radius: 0.25em;
+        padding-left: 0.3em;
+        padding-right: 0.3em;
+      }
+      li {
+        margin-bottom: 0.7em;
+      }
       b {
         font-weight: 700;
       }
@@ -44,6 +53,7 @@
       }
       a:hover {
         color: #166dd9;
+        text-decoration: underline;
       }
 
       ul {
@@ -137,13 +147,13 @@ li:before {
 {% block opengraph %}
     <meta property="og:title" content="sethmlarson.dev"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:description" content="A blog about Python, open source, HTTP, networking, and security"/>
+    <meta property="og:description" content="A blog about Python and the Internet"/>
     <meta property="og:image" content="/static/avatar.jpeg"/>
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:site" content="@sethmlarson"/>
     <meta name="twitter:creator" content="@sethmlarson"/>
     <meta name="twitter:title" content="sethmlarson.dev"/>
-    <meta name="twitter:description" content="A blog about Python, open source, HTTP, networking, and security"/>
+    <meta name="twitter:description" content="A blog about Python and the Internet"/>
 {% endblock %}
 </head>
 <body>
