--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,7 +30,7 @@
         font-family: 'JetBrains Mono', monospace;
         font-weight: 300;
         font-size: 24px;
-        color: #ffffff;
+        color: #dddddd;
         background-color: #222226;
       }
       :not(pre) > code {
