Update LinkedIn URL

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -168,7 +168,7 @@ li:before {
                     <a href="{{ url_for('list_blog_posts') }}">Blog</a> –
                     <a href="https://twitter.com/sethmlarson" target="_blank" rel="nofollow noopener noreferrer">Twitter</a> –
                     <a href="https://github.com/sethmlarson" target="_blank" rel="nofollow noopener noreferrer">GitHub</a> –
-                    <a href="https://www.linkedin.com/in/sethmichaellarson" target="_blank" rel="nofollow noopener noreferrer">LinkedIn</a>
+                    <a href="https://linkedin.com/in/sethmlarson" target="_blank" rel="nofollow noopener noreferrer">LinkedIn</a>
                 </span>
             </center>
         </div>
