Publish 'The problem with Flask async views and async globals'

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -161,7 +161,7 @@ li:before {
     <div class="row">
         <div class="col-12">
             <center>
-                <h1 style="margin-bottom: 0;">{% block header %}sethmlarson.dev{% endblock %}</h1>
+                <h1 style="margin-bottom: 0;">sethmlarson.dev</h1>
                 <center><span style="font-size: 0.8em; font-style: italic;">A blog about Python and the Internet</span></center><br>
                 <span style="font-size: 1.2em;">
                     <a href="/">About</a> –
