--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% block title %}{{ blog_title }} — sethmlarson.dev{% endblock %}
-{% block header %}{{ blog_title }}{% endblock %}
 {% block opengraph %}
     <meta property="og:title" content="{{ blog_title }} — sethmlarson.dev"/>
     <meta property="og:type" content="article"/>
@@ -16,12 +15,13 @@
 <div class="row">
     <div class="col-1"></div>
     <div class="col-10" >
-        <div style="background-color: #263C59; border-radius: 1em; padding: 1em; text-align: center;">
+        <div style="background-color: #263C59; border-radius: 0.7em; padding: 0.7em; text-align: center;">
             Like my content and want to get notified when there's something new?
             <br>
             You can subscribe via <a href="https://tinyletter.com/sethmlarson" target="_blank" rel="nofollow noopener noreferrer">Email</a> and <a href="{{ url_for('rss_blog_posts') }}">RSS</a>
         </div>
         <br>
+        <h2 style="text-align: center;">{{ blog_title }}</center></h2>
         <center>Published {{ blog_published_date }}</center>
     </div>
     <div class="col-1"></div>
@@ -36,7 +36,7 @@
 <div class="row">
     <div class="col-1"></div>
     <div class="col-10" >
-        <div style="background-color: #263C59; border-radius: 1em; padding: 1em; text-align: center;">
+        <div style="background-color: #263C59; border-radius: 0.7em; padding: 0.7em; text-align: center;">
             If you enjoyed this post <a href="{{ url_for('list_blog_posts') }}">you'll probably like these too</a>.
             <br>
             You can subscribe via <a href="https://tinyletter.com/sethmlarson" target="_blank" rel="nofollow noopener noreferrer">Email</a> and <a href="{{ url_for('rss_blog_posts') }}">RSS</a>
