Move new posts to index, about to its own page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -164,7 +164,7 @@ li:before {
                 <h1 style="margin-bottom: 0;">sethmlarson.dev</h1>
                 <center><span style="font-size: 0.8em; font-style: italic;">A blog about Python and the Internet</span></center><br>
                 <span style="font-size: 1.2em;">
-                    <a href="/">About</a> –
+                    <a href="{{ url_for('about') }}">About</a> –
                     <a href="{{ url_for('list_blog_posts') }}">Blog</a> –
                     <a href="https://twitter.com/sethmlarson" target="_blank" rel="nofollow noopener noreferrer">Twitter</a> –
                     <a href="https://github.com/sethmlarson" target="_blank" rel="nofollow noopener noreferrer">GitHub</a> –
