Make colors easier to read

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,8 +30,8 @@
         font-family: 'JetBrains Mono', monospace;
         font-weight: 300;
         font-size: 24px;
-        color: #dddddd;
-        background-color: #222226;
+        color: #bbbbbb;
+        background-color: #111111;
       }
       :not(pre) > code {
         background-color: #263C59;
@@ -60,6 +60,13 @@
   list-style: none;
   margin-left: 0;
   padding-left: 0;
+}
+
+div {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased !important;
+  -moz-font-smoothing: antialiased !important;
+  text-rendering: optimizelegibility !important;
 }
 
 li {
