--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -152,15 +152,17 @@ li:before {
 .il { color: #6897BB } /* Literal.Number.Integer.Long */
     </style>
 {% block opengraph %}
-    <meta property="og:title" content="sethmlarson.dev"/>
+    <meta property="og:site_name" content="Seth Michael Larson"/>
+    <meta property="og:author" content="Seth Michael Larson"/>
     <meta property="og:type" content="article"/>
     <meta property="og:description" content="A blog about Python and the Internet"/>
     <meta property="og:image" content="/static/avatar.jpeg"/>
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:site" content="@sethmlarson"/>
     <meta name="twitter:creator" content="@sethmlarson"/>
-    <meta name="twitter:title" content="sethmlarson.dev"/>
+    <meta name="twitter:title" content="Seth Michael Larson"/>
     <meta name="twitter:description" content="A blog about Python and the Internet"/>
+    <meta name="twitter:image" content="/static/avatar.jpeg"/>
 {% endblock %}
 </head>
 <body>
