--- a/app/templates/blog-posts.html
+++ b/app/templates/blog-posts.html
@@ -3,11 +3,11 @@
 <div class="row">
     <div class="col-1"></div>
     <div class="col-10">
-        <div style="background-color: #263C59; border-radius: 0.7em; padding: 0.7em; text-align: center;">
-            Like my content and want to get notified when there's something new?
-            <br>
-            You can subscribe via <a href="https://tinyletter.com/sethmlarson" target="_blank" rel="nofollow noopener noreferrer">Email</a> and <a href="{{ url_for('rss_blog_posts') }}">RSS</a>
+        <center>
+        <div class="how-to-subscribe">
+            Like what you see? Get notified of new articles via <a href="">email</a> or <a href="">RSS</a>.
         </div>
+        </center>
     </div>
     <div class="col-1"></div>
 </div>
