--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Seth Michael Larson">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="{{ url_for('rss_blog_posts') }}"/>
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/static/favicon.ico">
     <link rel="stylesheet" href="/static/style.css">
 {% block opengraph %}
     <meta property="og:site_name" content="Seth Michael Larson"/>
