New blog post, more blog style tweaks

--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -37,7 +37,7 @@
     <div class="col-10">
         <center>
         <div class="how-to-subscribe">
-            Like what you see? Get notified of new articles via <a href="">email</a> or <a href="">RSS</a>.
+            Enjoy this post? <span class="heart">❤</span> Subscribe for more via <a href="https://tinyletter.com/sethmlarson">email</a> or <a href="{{ url_for('rss_blog_posts') }}">RSS</a>.
         </div>
         </center>
     </div>
