--- a/app/templates/blog-posts.html
+++ b/app/templates/blog-posts.html
@@ -5,7 +5,7 @@
     <div class="col-10">
         <center>
         <div class="how-to-subscribe">
-            Like what you see? Get notified of new articles via <a href="">email</a> or <a href="">RSS</a>.
+            Want to be notified about new posts? <span class="heart">❤</span> Subscribe via <a href="https://tinyletter.com/sethmlarson">email</a> or <a href="{{ url_for('rss_blog_posts') }}">RSS</a>.
         </div>
         </center>
     </div>
@@ -15,9 +15,8 @@
     <div class="col-1"></div>
     <div class="col-10">
         {% for month in blog_posts %}
-        <h2>Posts from {{ month }}</h2>
         {% for bp in blog_posts[month] %}
-        <h3> — <a href="{{ url_for('get_blog_post', date=bp.date, blog_post=bp.markdown_path.name[:-3]) }}">{{ bp.title }}</a></h3>
+        <h3> — <a href="{{ url_for('get_blog_post', blog_post=bp.slug) }}">{{ bp.title }}</a> ({{ bp.date }})</h3>
         {% endfor %}
         {% endfor %}
     </div>
