More grammar tweaks

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,7 +18,7 @@
         <div class="col-10">
             <h2>Who am I?</h2>
             <p>
-                My pronouns are he/him. I was born and currently reside in Minneapolis, Minnesota.<br>
+                My pronouns are he/him. I currently reside in Minneapolis, Minnesota.<br>
                 You can contact me via email: <a href="mailto:sethmichaellarson@gmail.com">sethmichaellarson@gmail.com</a>
             </p>
             <h2>Writing about tech</h2>
