--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,17 +18,11 @@
         <div class="col-10">
             <h2>Who am I?</h2>
             <p>
-                My pronouns are he/him. I currently reside in Minneapolis, Minnesota.<br>
-                You can contact me via email: <a href="mailto:sethmichaellarson@gmail.com">sethmichaellarson@gmail.com</a>
+                My pronouns are he / him. I currently reside in Minneapolis, Minnesota. I write about intermediate and advanced Python, API design, and Internet technologies. If you're interested
+                in any of these topics you can <a href="{{ url_for('list_blog_posts') }}">read articles on my blog</a> or <a href="https://twitter.com/sethmlarson" target="_blank" rel="noopener">follow me on Twitter</a>.
             </p>
-            <h2>Writing about tech</h2>
-            <p>
-            I write about intermediate and advanced Python, API design, and Internet technologies. If you're interested
-            in any of these topics you can <a href="{{ url_for('list_blog_posts') }}">read articles on my blog</a> or <a href="https://twitter.com/sethmlarson">follow me on Twitter</a>.
-            </p>
-
-            <h2>Open Source Maintainer</h2>
-            </p>
+            <p>You can contact me via <a href="mailto:sethmichaellarson@gmail.com" target="_blank" rel="noopener">email</a> or <a href="https://twitter.com/sethmlarson" target="_blank" rel="noopener">Twitter</a>.</p>
+            <h2>Open source maintainer</h2>
             <p>
                 I maintain and contribute to
                 <a href="https://github.com/sethmlarson?tab=repositories" target="_blank" rel="noopener noreferrer">many open source projects</a>,
@@ -54,14 +48,9 @@
                 <a href="https://github.com/sponsors/sethmlarson" target="_blank" rel="noopener noreferrer">
                 sponsor me on GitHub Sponsors</a> to support my cravings for foods like tacos and hotpot.
             </p>
-            <p>
-                I <a href="/blog">blog</a> and
-                <a href="https://twitter.com/sethmlarson" target="_blank" rel="noopener noreferrer">tweet</a>
-                frequently about open source, Python, web, security, and other technologies.
-            </p>
             <h2>Engineer at Elastic</h2>
             <p>
-                I'm a Senior Software Engineer at <a href="https://elastic.co" target="_blank" rel="noopener noreferrer">Elastic</a>
+                I'm a senior Software Engineer at <a href="https://elastic.co" target="_blank" rel="noopener noreferrer">Elastic</a>
                 working as maintainer of the
                 <a href="https://github.com/elastic/elasticsearch-py" target="_blank" rel="noopener noreferrer">
                 Python API clients</a> for services like Elasticsearch, Enterprise Search, and more. I'm also
