New blog post: 'Strict Python function parameters'

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>{% block title %}Seth Michael Larson{% endblock %}</title>
+    <title>{% block title %}Seth Michael Larson — Blogging about Python and the Internet{% endblock %}</title>
     <meta name="description" content="Blogging about Python and the Internet">
     <meta name="keywords" content="blog python open source http networking security">
     <meta name="author" content="Seth Michael Larson">
