--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -30,7 +30,7 @@
     <div class="col-12">
         <center>
         <div class="how-to-subscribe">
-            Enjoy this post? <span class="heart">❤&#xFE0E</span> Subscribe for more via <a href="https://tinyletter.com/sethmlarson">the newsletter</a> or <a href="{{ url_for('rss_blog_posts') }}">RSS</a>
+            Enjoy this article? <span class="heart">❤&#xFE0E</span> Subscribe for more via <a href="https://tinyletter.com/sethmlarson">the newsletter</a> or <a href="{{ url_for('rss_blog_posts') }}">RSS</a>
         </div>
         </center>
     </div>
